[package]
name = "owner-manager"
authors = ["Clover Network <https://github.com/clover-network>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://cloverdefi.com"
repository = "https://github.com/clover-network/clover"
version = "0.1.0"


[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'


[dependencies]
frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }
sp-core = {  version = '2.0.0', default-features = false}
sp-runtime = {  version = '2.0.0', default-features = false}
sp-std = { version = '2.0.0', default-features = false}
sp-serializer = {version = '2.0.0', default-featuers = false}

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    "codec/std",
    'frame-support/std',
    'frame-system/std',
    'sp-core/std',
    'sp-runtime/std',
    'sp-std/std'
]
