[package]
name = "owner-manager-rpc"
version = "0.9.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3.0"}
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = {version = "1.0", features = ["derive"], optional = true}

# Substrate package
sp-api = {version = "2.0.0", default-features = false }
sp-blockchain = {version = "2.0.0", default-features = false}
sp-rpc = {version = "2.0.0", default-features = false}
sp-runtime = {version = "2.0.0", default-features = false}
sp-core = {version = "2.0.0", default-features = false}

# local package
owner-manager-runtime-api = {version = "0.9.0", path = "../runtime-api", default-feature = false}

[features]
default = ["std"]
std = [
    "serde",
    "sp-api/std",
    "sp-runtime/std",
    "sp-core/std",
    "owner-manager-runtime-api/std",
]