[package]
name = "owner-manager-runtime-api"
version = "0.9.0"
authors = ["Davirain-Su <davirain.yin@gmail.com>"]
edition = "2018"
license = ""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
primitives = { default-features = false, package = 'clover-primitives', path = '../../../primitives', version = '0.9.0'}
sp-api = { version = "2.0.0", default-features = false }
sp-std = { version = "2.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
sp-core = {version = "2.0.0", default-features = false}


[features]
default = ["std"]
std = [
    "sp-api/std",
    "codec/std",
    "sp-core/std",
]